优化检索逻辑